fix: allow Cloudflare frontend CORS origin